apps/base/scrypted/scrypted-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrypted-external
  namespace: scrypted
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/controller: scrypted
  ports:
    - name: https
      port: 10443
      targetPort: https
      protocol: TCP
    - name: http
      port: 10444
      targetPort: http
      protocol: TCP
